[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lobby/PreGameLobby.gd" type="Script" id=1]
[ext_resource path="res://Fonts/m5x7.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="PreGameLobby" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 368.0

[node name="PlayerInfoPanel" type="Panel" parent="Panel"]
self_modulate = Color( 0.385742, 0.385742, 0.385742, 1 )
margin_left = 16.0
margin_top = 16.0
margin_right = 384.0
margin_bottom = 352.0

[node name="PlayerList" type="Label" parent="Panel/PlayerInfoPanel"]
margin_left = 32.0
margin_top = 32.0
margin_right = 208.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )

[node name="PlayerLabel" type="Label" parent="Panel/PlayerInfoPanel"]
margin_left = 16.0
margin_right = 176.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
text = "Players:"

[node name="AdventurerButton" type="Button" parent="Panel"]
margin_left = 432.0
margin_top = 32.0
margin_right = 576.0
margin_bottom = 80.0
text = "Adventurer"

[node name="PirateButton" type="Button" parent="Panel"]
margin_left = 432.0
margin_top = 96.0
margin_right = 576.0
margin_bottom = 144.0
text = "Pirate"

[node name="StartButton" type="Button" parent="Panel"]
margin_left = 432.0
margin_top = 272.0
margin_right = 576.0
margin_bottom = 320.0
text = "Start Game"

[node name="ExitButton" type="Button" parent="Panel"]
margin_left = 432.0
margin_top = 208.0
margin_right = 576.0
margin_bottom = 256.0
text = "EXIT"
[connection signal="pressed" from="Panel/AdventurerButton" to="." method="_on_AdventurerButton_pressed"]
[connection signal="pressed" from="Panel/PirateButton" to="." method="_on_PirateButton_pressed"]
[connection signal="pressed" from="Panel/StartButton" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Panel/ExitButton" to="." method="_on_ExitButton_pressed"]
